# home-utilities

./: .gitignore  README.md
.github/workflows/: build-homeserver.yaml
air780e-uart-sms-forward/script/: config.lua  main.lua  processor.lua  util.lua
esp32-fan-controller/: platformio.ini
esp32-fan-controller/include/: server.h  setup_wifi.h
esp32-fan-controller/src/: main.cpp  setup_wifi.cpp
home-server/front/: next.config.ts  package-lock.json  package.json
home-server/front/app/: layout.tsx  page.tsx
home-server/server/: .env.example  .gitignore  Cargo.toml  Dockerfile  build.sh  go.mod  go.sum  main.go
home-server/server/common/: config.go  log.go
home-server/server/context/: internal_context.go
home-server/server/handlers/: gateway_conf_handler.go  proxy_subscription_handler.go  router.go
home-server/server/infrastructure/: http.go  ssh.go
home-server/server/logs/: home_server.log.2025-12-15
home-server/server/models/gateway/: config.go  config_info.go
home-server/server/models/proxy/: base.go  hysteria2.go  shadowsocks.go  vmess.go
home-server/server/models/response/: APIResponse.go  biz_code.go
home-server/server/services/: gate_conf_service.go  proxy_subscription_service.go
home-server/server/src/: app.rs  lib.rs  main.rs  state.rs
home-server/server/src/application/service/: mod.rs
home-server/server/src/common/: config.rs
scripts/: .gitignore  README.md
scripts/modify-wifi-channel/: config.py  modify-wifi-channel.py  requirements.txt
scripts/truenas-backup/: auto_backup.py  notify.py  requirements.txt  wol.py
(+5 files in other folders)
