[package]
name = "home_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
base64 = "0.22.1"
dotenv = "0.15.0"
reqwest = "0.12.25"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
